--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Oskaras Kanasevicius # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a Python and JavaScript developer  # add description
+author-img: oskaras.jpg # add your photo
+about-author: Python and JavaScript Developer  # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: datahazard # add your Github handle
