--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: datahazard
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog about Python and JavaScript.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://datahazard.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -12,14 +10,14 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Oskaras Kanasevicius # add your name
 author-img: oskaras.jpg # add your photo
 about-author: Python and JavaScript Developer  # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
+social-twitter: oskkana # add your Twitter handle
+# social-facebook: # add your Facebook handle
 social-github: datahazard # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-linkedin: oskaraskanasevicius # add your Linkedin handle
+social-email: oskaraskanasevicius@outlook.com # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+# discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
