--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author: Oskaras Kanasevicius # add your name
 author-img: oskaras.jpg # add your photo
 about-author: Python and JavaScript Developer  # add description
 social-twitter: oskkana # add your Twitter handle
-# social-facebook: # add your Facebook handle
+social-facebook: oskaras.kan # add your Facebook handle
 social-github: datahazard # add your Github handle
 social-linkedin: oskaraskanasevicius # add your Linkedin handle
 social-email: oskaraskanasevicius@outlook.com # add your Email address
